tests/checker/ok/parallel_combinator_surface.ow
use oneway/std/concurrent

main = () -> Unit {
    "ok".print()
}
