tests/checker/fail/string_invalid_escape.ow
main = () -> Unit {
    "bad escape \q".print()
}
